# rust-LIN

./: .fusa-evidence.json  .fusa-hara.json  .fusa-iec62443.json  .fusa-problems.json  .fusa-reqs.json  .fusa.json  ARCHITECTURE.md  BOUNDARY_DIAGRAM.md  CODING_STANDARD.md  CONTRIBUTING.md  Cargo.toml  DO178C_ALIGNMENT.md  INCIDENT-RESPONSE.md  LICENSE  README.md  ROADMAP.md  SAFETY_MANUAL.md  SAFETY_PLAN.md  SECURITY.md  fmea.json  requirements.json  safety-case.json  safety-case.md  sbom.json  tara.json
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
src/: adapt.rs  base64_serde.rs  bus.rs  error.rs  frame.rs  lib.rs  relay.rs  seooc.rs
src/ldf/: mod.rs
src/master/: mod.rs
src/mock/: mod.rs
src/safety/: mod.rs
src/slave/: mod.rs
src/virtual_bus/: mod.rs
testdata/relay-vectors/: lin-frame.json
testdata/relay-vectors/errors/: lin-diagnostic-wrong-checksum.json  lin-id-overflow.json
tests/: integration_test.rs
tool-qualification/: cargo-audit-tql1.md  rsfusa-tql2.md  rustc-tql3.md
